--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "express": "^4.18.1",
     "ignore": "^5.2.0",
     "knex": "^0.95.15",
+    "node": "^18.2.0",
     "node-loader": "^2.0.0",
     "npm": "^8.8.0",
     "pg": "^8.7.3",
+    "react": "^18.2.0",
     "tachyons": "^4.12.0"
   },
   "repository": {
